_sass/wp-compat.scss
/**
 * Ports of various styles from old WordPress site for compatibility with existing classes in imported posts
 */

.alignleft,
img.alignleft {
	float: left;
    margin-right:20px;
}
.alignright,
img.alignright {
	display: block;
	float: right;
    margin-left:20px;
}
.aligncenter,
img.aligncenter {
	margin-left:auto;
	margin-right:auto;
	display: block;
	clear: both;
}

img.gallery_thumb {
    object-fit: cover;
}

.youtube_player {
    margin-top: 5px;
}

#content {
    /* margin:0 0 0 10px; */
    width:540px;
    overflow:hidden;
}

.portfolio_thumb_section {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
}

.portfolio_thumb_item {
}

.portfolio_index_date {
    font-size: 10pt;
    color: gray;
}

.entry-content {
    padding: 22px 0 0 0;
}

.entry-utility {
    clear: both;
    color: #666;
    font-size: 13px;
    line-height: 18px;
    margin: 0 0 44px 0;
}

h3.go_link {
    font-size: 150%;
    margin-top: 20px;
}

table.project_info_box {
    border: none;
    border-collapse: collapse;
    margin: 0 0 22px 0;

    tr {
        border-bottom: 1px solid #ccc;
    }

    th, td {
        padding: .7em 1.25em;
    }
}

.icon {
    svg {
        max-width: 16px;
        max-height: 16px; 
    }
}

.footer-col-2 {
    width: calc(30% - (30px / 2));
}

.header-image {
    padding-bottom: 15px;
}

